WEB-57: Address Sonar Issues
- Replace deprecated methods
- Use `.toList()` instead of `.collect(...)`